// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Svg renders a menu icon with $float property 1`] = `
<DocumentFragment>
  .emotion-0 {
  float: left;
}

<svg
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;

exports[`Svg renders a menu icon with no size 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #158acf;
  color: #158acf;
  display: inline-block;
}

<svg
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;

exports[`Svg renders a menu icon with specified size and color 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #158acf;
  color: #158acf;
  width: 4px;
  height: 4px;
  display: inline-block;
}

<svg
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;

exports[`Svg renders a menu icon with specified size and default color 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #000000;
  color: #000000;
  width: 24px;
  height: 24px;
  display: inline-block;
}

<svg
    class="emotion-0"
    viewBox="1 2 3 4"
  />
</DocumentFragment>
`;
